tryna fix text alignment and coloring for card/container

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,6 +104,9 @@ body, html {
 /* Some left and right padding inside the container */
 .container {
   padding: 0 16px;
+  background-color: white;
+  color: grey;
+  text-align: center;
 }
 
 /* Clear floats */
